k8s/foo-hello.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-foo
  labels:
    app: hello-kubernetes-foo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes-foo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes-foo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-kubernetes-foo
  template:
    metadata:
      labels:
        app: hello-kubernetes-foo
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.8
        ports:
        - containerPort: 8080
