k8s/ingress-primary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: primary-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # not here before TLS
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-http01-prod
    # allow insecure http
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  # not here before TLS
  tls:
  - hosts:
    - first.fabianlee-lab.online
    - second.fabianlee-lab.online
    secretName: primary-letsencrypt-tls

  rules:
  - host: "first.fabianlee-lab.online"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-kubernetes-first
            port:
              number: 80
  - host: "second.fabianlee-lab.online"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-kubernetes-second
            port:
              number: 80
