k8s/ingress-secondary-wildcard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secondary-ingress
  annotations:
    kubernetes.io/ingress.class: nginx-secondary
    cert-manager.io/cluster-issuer: letsencrypt-dns01-prod
spec:
  tls:
  - hosts:
    - '*.do.fabianlee-lab.online'
    secretName: secondary-letsencrypt-tls

  rules:
  - host: "*.do.fabianlee-lab.online"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-kubernetes-foo
            port:
              number: 80
